--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SumitAgr/Weather-Forecast-Application.git"
+    "url": "https://github.com/dipaktaur93/Weather-Application"
   },
-  "author": "Sumit Agrawal (github.com/SumitAgr)",
+  "author": "Dipak Taur",
   "license": "ISC",
-  "homepage": "https://github.com/SumitAgr/Weather-Forecast-Application#readme",
+  "homepage": "https://github.com/dipaktaur93/Weather-Application#readme",
   "dependencies": {
     "axios": "^0.19.0",
     "prop-types": "^15.5.8",
